--- a/homepage.html
+++ b/homepage.html
@@ -14,12 +14,11 @@
     <a name='home'></a>
     <div class="container-fluid titulo">
         <div class="row">
-            <div class="col"><a href="#home">Home</a></div>
-            <div class="col" style="color: white;"><a href="#servicio">Servicios</a></div>
-            <div class="col"><a href="#ubicacion">Ubicacion</a></div>
-            <div class="col"><a href="#contacto">Contacto</a></div>
+            <div class="col"><a href="#home" class="navbar">Home</a></div>
+            <div class="col"><a href="#servicio" class="navbar">Servicios</a></div>
+            <div class="col"><a href="#ubicacion" class="navbar">Ubicacion</a></div>
+            <div class="col"><a href="#contacto" class="navbar">Contacto</a></div>
         </div>
-
     </div>
     <div class="container-fluid login-logo" style="padding: 15px;">
         <img src="c:/github/barberia/assets/img/logo-s.png" />
