--- a/homepage.html
+++ b/homepage.html
@@ -12,12 +12,12 @@
     <link rel="stylesheet" href="c:/github/barberia/assets/css/estilo.css">
     <title>Document</title>
     <a name='home'></a>
-    <div class="container-fluid titulo">
-        <div class="row">
-            <div class="col"><a href="#home" class="navbar">Home</a></div>
-            <div class="col"><a href="#servicio" class="navbar">Servicios</a></div>
-            <div class="col"><a href="#ubicacion" class="navbar">Ubicacion</a></div>
-            <div class="col"><a href="#contacto" class="navbar">Contacto</a></div>
+    <div class="container-fluid titulo text-center">
+        <div class="row" >
+            <div class="col-3"><a href="#home" class="navbar">Home</a></div>
+            <div class="col-3"><a href="#servicio" class="navbar">Servicios</a></div>
+            <div class="col-3"><a href="#ubicacion" class="navbar">Ubicacion</a></div>
+            <div class="col-3"><a href="#contacto" class="navbar">Contacto</a></div>
         </div>
     </div>
     <div class="container-fluid login-logo" style="padding: 15px;">
