--- a/homepage.html
+++ b/homepage.html
@@ -101,22 +101,22 @@
     <div class="container-fluid text-center">
         <div class="row">
             <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios1.png"
-                    style="background-size: cover; background-position: center;"></div>
+                    style="max-width: 100%;"></div>
             <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios2.png"
-                    style="background-size: cover; background-position: center;"></div>
+                    style="max-width: 100%;"></div>
             <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios3.png"
-                    style="background-size: cover; background-position: center;"></div>
+                    style="max-width: 100%;"></div>
         </div>
         <div class="row">
             <div class="col-sm-6"><img src="c:/github/barberia/assets/img/servicios4.png"
-                    style="background-size: cover; background-position: center;"></div>
+                    style="max-width: 100%;"></div>
             <div class="col-sm-6"><img src="c:/github/barberia/assets/img/servicios5.png"
-                    style="background-size: cover; background-position: center;"></div>
+                    style="max-width: 100%;"></div>
         </div>
     </div>
 
     <div class="container-fluids text-center" style="border-color: black; border-radius: 50%; padding: 40px">
-        <a name="ubicacion"></a>
+        <a name="ubicacion"></a><br><br><br>
         <div class="container-fluid psub">
             UBICACIÓN
         </div><br><br><br>
