--- a/homepage.html
+++ b/homepage.html
@@ -124,7 +124,7 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3332.292247802172!2d-70.68076012521905!3d-33.36343549305959!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c7025c925e0f%3A0x7f2f6a657c08d14a!2sDuoc%20UC%3A%20Sede%20Plaza%20Norte!5e0!3m2!1ses-419!2scl!4v1711684061143!5m2!1ses-419!2scl"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe><br><br><br>
-    </div>
+    </div><br><br><br>
     <div class="container-fluid text-center">
         <a name="contacto"></a>
         <div class="container-fluid psub">
