--- a/reserva.html
+++ b/reserva.html
@@ -1,21 +1,25 @@
 <html>
-        <head>
-            <h1>Reservar hora de atencion</h1>
-        </head>
-        <body>
-                <div>
-                    <label for="fecha_atencion">Seleccione fecha:</label>
-                    <input type="date" id="fecha_atencion" name="fecha_atencion" required>
-                </div>
-                <div>
-                    <label for="hora_atencion"> Seleccione horario :</label>
-                    <select id="hora_atencion" name="hora_atencion" required>
-                        <option value="proyecto1">12:00</option>
-                    </select>
-                </div>
-                <div>
-                    <button type="submit">Agendar hora</button>
-                </div>
 
-        </body>
+<head>
+    <title>Reserva-HS</title>
+    <h1>Reservar hora de atencion</h1>
+</head>
+
+<body>
+    <div>
+        <label for="fecha_atencion">Seleccione fecha:</label>
+        <input type="date" id="fecha_atencion" name="fecha_atencion" required>
+    </div>
+    <div>
+        <label for="hora_atencion"> Seleccione horario :</label>
+        <select id="hora_atencion" name="hora_atencion" required>
+            <option value="proyecto1">12:00</option>
+        </select>
+    </div>
+    <div>
+        <button type="submit">Agendar hora</button>
+    </div>
+
+</body>
+
 </html>
