--- a/creausuario.html
+++ b/creausuario.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HS-Barberia</title>
+    <title>CreaUsuario-HS</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="c:/github/barberia/assets/css/estilo.css">
 </head>
+
 <body>
     <div class="titulo">
         Vive la experiencia, Reserva tu hora
@@ -15,9 +17,9 @@
     <div class="container-fluid">
         <div class="row">
             <div class="mb-0 col-sm-8 col-lg-4 login">
-                <div style="background-color: white; padding: 40px;border-radius:5%;">
-                <img src="c:/github/barberia/assets//img/logo-s.png" class="login-logo">
-                <div class="mb-1 align-items-center justify-content-center ">
+                <div class="text-center" style="background-color: white; padding: 40px;border-radius:5%;">
+                    <img src="c:/github/barberia/assets//img/logo-s.png" class="login-logo">
+                    <div class="mb-1 align-items-center justify-content-center ">
                         <label for="formGroupExampleInput" class="form-label text-center ">Nombre</label>
                         <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
                     </div>
@@ -40,4 +42,5 @@
         </div>
     </div>
 </body>
+
 </html>
