--- a/homepage.html
+++ b/homepage.html
@@ -10,14 +10,15 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="c:/github/barberia/assets/css/estilo.css">
-    <title>Document</title>
+    <title>HomePage-HS</title>
     <a name='home'></a>
     <div class="container-fluid titulo text-center">
-        <div class="row" >
-            <div class="col-3"><a href="#home" class="navbar">Home</a></div>
-            <div class="col-3"><a href="#servicio" class="navbar">Servicios</a></div>
-            <div class="col-3"><a href="#ubicacion" class="navbar">Ubicacion</a></div>
-            <div class="col-3"><a href="#contacto" class="navbar">Contacto</a></div>
+        <div class="row">
+            <div class="col-2"><a href="#home" class="navbar">Home</a></div>
+            <div class="col-2"><a href="#servicio" class="navbar">Servicios</a></div>
+            <div class="col-2"><a href="#ubicacion" class="navbar">Ubicacion</a></div>
+            <div class="col-2"><a href="#contacto" class="navbar">Contacto</a></div>
+            <div class="col-2"><a href="login.html" class="navbar">Reservar</a></div>
         </div>
     </div>
     <div class="container-fluid login-logo" style="padding: 15px;">
@@ -100,18 +101,18 @@
     <br><br><br>
     <div class="container-fluid text-center">
         <div class="row">
-            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios1.png"
-                    style="max-width: 100%;"></div>
-            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios2.png"
-                    style="max-width: 100%;"></div>
-            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios3.png"
-                    style="max-width: 100%;"></div>
+            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios1.png" style="max-width: 100%;">
+            </div>
+            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios2.png" style="max-width: 100%;">
+            </div>
+            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios3.png" style="max-width: 100%;">
+            </div>
         </div>
         <div class="row">
-            <div class="col-sm-6"><img src="c:/github/barberia/assets/img/servicios4.png"
-                    style="max-width: 100%;"></div>
-            <div class="col-sm-6"><img src="c:/github/barberia/assets/img/servicios5.png"
-                    style="max-width: 100%;"></div>
+            <div class="col-sm-6"><img src="c:/github/barberia/assets/img/servicios4.png" style="max-width: 100%;">
+            </div>
+            <div class="col-sm-6"><img src="c:/github/barberia/assets/img/servicios5.png" style="max-width: 100%;">
+            </div>
         </div>
     </div>
 
