--- a/restorepass.html
+++ b/restorepass.html
@@ -1,12 +1,14 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HS-Barberia</title>
+    <title>Recuperar-HS</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="c:/github/barberia/assets/css/estilo.css">
 </head>
+
 <body>
     <div class="titulo">
         Recupera tu clave, Reserva tu hora
@@ -14,11 +16,11 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class=" col-lg-4 login">
-             
+            <div class=" col-lg-4 login text-center">
+
                 <div style="background-color: white; padding: 40px;border-radius:5%;">
-                <img src="c:/github/barberia/assets//img/logo-s.png" class="login-logo">
-                <div class="mb-3 align-items-center justify-content-center">
+                    <img src="c:/github/barberia/assets//img/logo-s.png" class="login-logo">
+                    <div class="mb-3 align-items-center justify-content-center">
                         <label for="formGroupExampleInput" class="form-label text-center">Ingresa tu email</label>
                         <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
                     </div>
@@ -30,4 +32,5 @@
         </div>
     </div>
 </body>
+
 </html>
