--- a/revisacorreo.html
+++ b/revisacorreo.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HS-Barberia</title>
+    <title>RevisaCorreo-HS</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="c:/github/barberia/assets/css/estilo.css">
 </head>
+
 <body>
     <div class="titulo">
         Estas a un paso de reservar tu hora
     </div>
-
     <div class="container-fluid">
         <div class="row">
             <div class=" col-lg-4 login">
                 <div style="background-color: white; padding: 40px;border-radius:5%;">
-                <img src="c:/github/barberia/assets//img/logo-s.png" class="login-logo">
-                <p class="pcorreo">Correo de recuperacion enviado. Por favor revisa tu bandeja de entrada.</p>
+                    <img src="c:/github/barberia/assets//img/logo-s.png" class="login-logo">
+                    <p class="pcorreo">Correo de recuperacion enviado. Por favor revisa tu bandeja de entrada.</p>
                 </div>
             </div>
             <div class="col-lg-8 img_restorepass"></div>
         </div>
     </div>
 </body>
+
 </html>
