--- a/homepage.html
+++ b/homepage.html
@@ -12,15 +12,27 @@
     <link rel="stylesheet" href="c:/github/barberia/assets/css/estilo.css">
     <title>HomePage-HS</title>
     <a name='home'></a>
-    <div class="container-fluid titulo text-center">
-        <div class="row">
-            <div class="col-2"><a href="#home" class="navbar">Home</a></div>
-            <div class="col-2"><a href="#servicio" class="navbar">Servicios</a></div>
-            <div class="col-2"><a href="#ubicacion" class="navbar">Ubicacion</a></div>
-            <div class="col-2"><a href="#contacto" class="navbar">Contacto</a></div>
-            <div class="col-2"><a href="login.html" class="navbar">Reservar</a></div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Home</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Ubicacion</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="#">Contacto</a>
+              </li>
+            </ul>
+          </div>
         </div>
-    </div>
+      </nav>
     <div class="container-fluid login-logo" style="padding: 15px;">
         <img src="c:/github/barberia/assets/img/logo-s.png" />
     </div>
