--- a/reserva.html
+++ b/reserva.html
@@ -17,10 +17,24 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class=" col-lg-4 login text-center">
+            <div class=" col-lg-12 login text-center">
 
                 <div style="background-color: white; padding: 41px;border-radius:5%;">
                     <img src="c:/github/barberia/assets//img/logo-s.png" class="login-logo">
+                    <label>Selecciona tu BARBERO</label>
+                    <div class="container-fluid text-center">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <img src="c:/github/barberia/assets/img/barbero3.png" style="max-width: 100%;">
+                            </div>
+                            <div class="col-sm-4">
+                                <img src="c:/github/barberia/assets/img/barbero2.png" style="max-width: 100%;">
+                            </div>
+                            <div class="col-sm-4">
+                                <img src="c:/github/barberia/assets/img/barbero1.png" style="max-width: 100%;">
+                            </div>
+                        </div>
+                    </div><br>
                     <div class="mb-3 align-items-center justify-content-center">
                         <label for="fecha_atencion">Seleccione fecha:</label>
                         <input type="date" id="fecha_atencion" name="fecha_atencion" required>
@@ -29,11 +43,11 @@
                         <label for="hora_atencion"> Seleccione horario :</label>
                         <select id="hora_atencion" name="hora_atencion" required>
                             <option value="proyecto1">12:00</option>
-                        </select>
+                        </select><br>
+                        <a class="btn btn-primary" href="#" role="button">Agendar</a><br>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-8 img_lateral"></div>
         </div>
     </div>
 </body>
