--- a/homepage.html
+++ b/homepage.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="c:/github/barberia/assets/css/estilo.css">
     <title>HomePage-HS</title>
     <a name='home'></a>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,16 +20,19 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Servicios</a>
+                <a class="nav-link" href="#servicio">Servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Ubicacion</a>
+                <a class="nav-link" href="#ubicacion">Ubicacion</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#">Contacto</a>
+                <a class="nav-link " href="#contacto">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="login.html">Reserva</a>
               </li>
             </ul>
           </div>
