se corrigen errores

--- a/homepage.html
+++ b/homepage.html
@@ -116,7 +116,7 @@
         </div>
     </div>
     <br><br><br>
-    <div class="container-fluid text-center">
+    <div class="container-fluid text-center align-items-center">
         <div class="row">
             <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios1.png" style="max-width: 100%;">
             </div>
