--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
                         <label for="formGroupExampleInput2" class="form-label">Contraseña</label>
                         <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="">
                     </div>
-                    <a class="btn btn-primary" href="#" role="button">Iniciar</a><br>
+                    <a class="btn btn-primary" href="./reserva.html" role="button">Iniciar</a><br>
                     <a href="restorepass.html">¿OLVIDASTE TU CLAVE?</a><br>
                     <a href="creausuario.html">¿NO TIENES CUENTA?</a>
                 </div>
