--- a/reserva.html
+++ b/reserva.html
@@ -21,17 +21,20 @@
 
                 <div style="background-color: white; padding: 41px;border-radius:5%;">
                     <img src="c:/github/barberia/assets//img/logo-s.png" class="login-logo">
-                    <label>Selecciona tu BARBERO</label>
+                    <p class="psub" style="padding: 20px; color: black;">SELECCIONA BARBERO</p><br>
                     <div class="container-fluid text-center">
-                        <div class="row">
+                        <div class="row"><br><br>
                             <div class="col-sm-4">
-                                <img src="c:/github/barberia/assets/img/barbero3.png" style="max-width: 100%;">
+                                <img src="c:/github/barberia/assets/img/barbero3.png" style="max-width: 100%; padding: 10px;"><br>
+                                <button type="button" class="btn btn-lg btn-danger">Camila Oyarzo</button><br>
                             </div>
                             <div class="col-sm-4">
-                                <img src="c:/github/barberia/assets/img/barbero2.png" style="max-width: 100%;">
+                                <img src="c:/github/barberia/assets/img/barbero2.png" style="max-width: 100%; padding: 10px;">
+                                <br><button type="button" class="btn btn-lg btn-danger">Matias Rivera</button><br>
                             </div>
                             <div class="col-sm-4">
-                                <img src="c:/github/barberia/assets/img/barbero1.png" style="max-width: 100%;">
+                                <img src="c:/github/barberia/assets/img/barbero1.png" style="max-width: 100%; padding: 10px;">
+                                <br><button type="button" class="btn btn-lg btn-danger">Felipe Galaz</button><br>
                             </div>
                         </div>
                     </div><br>
@@ -43,8 +46,15 @@
                         <label for="hora_atencion"> Seleccione horario :</label>
                         <select id="hora_atencion" name="hora_atencion" required>
                             <option value="proyecto1">12:00</option>
-                        </select><br>
-                        <a class="btn btn-primary" href="#" role="button">Agendar</a><br>
+                            <option value="proyecto1">12:30</option>
+                            <option value="proyecto1">13:00</option>
+                            <option value="proyecto1">13:30</option>
+                            <option value="proyecto1">14:30</option>
+                            <option value="proyecto1">15:30</option>
+                            <option value="proyecto1">16:00</option>
+                        </select><br><br>
+                        <a class="btn btn-primary" href="./homepage.html" role="button">Volver a Home</a>
+                        <a class="btn btn-primary" href="#" role="button" >Agendar</a><br>
                     </div>
                 </div>
             </div>
