se modifican reserva y home page

--- a/homepage.html
+++ b/homepage.html
@@ -63,12 +63,13 @@
     </div>
 </head>
 
-<body class="text-center">
-    <div class="container-fluid">
+<body>
+    <div class="container-fluid text-center">
         <a name="servicio"></a>
         <p class="psub" style="padding: 100px;">NUESTROS SERVICIOS</p>
-        <div class="row">
-            <div class="col sm-3">
+        <div class="row text-center">
+            <div class="col-sm-1"></div>
+            <div class="col sm-2">
                 <div class="card" style="width: 18rem;">
                     <img src="c:/github/barberia/assets/img/cortecabello.png" class="card-img-top">
                     <div class="card-body">
@@ -79,7 +80,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col sm-3">
+            <div class="col sm-2">
                 <div class="card" style="width: 18rem;">
                     <img src="c:/github/barberia/assets/img/perfilado.png" class="card-img-top">
                     <div class="card-body">
@@ -91,7 +92,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col sm-3">
+            <div class="col-sm-1"></div>
+            <div class="col sm-2">
                 <div class="card" style="width: 18rem;">
                     <img src="c:/github/barberia/assets/img/afeitado.png" class="card-img-top">
                     <div class="card-body">
@@ -102,7 +104,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col sm-3">
+            <div class="col sm-2">
                 <div class="card" style="width: 18rem;">
                     <img src="c:/github/barberia/assets/img/facial.png" class="card-img-top">
                     <div class="card-body">
@@ -118,22 +120,26 @@
     <br><br><br>
     <div class="container-fluid text-center align-items-center">
         <div class="row">
-            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios1.png" style="max-width: 100%;">
+            <div class="col-sm-1"></div>
+            <div class="col-sm-3"><img src="c:/github/barberia/assets/img/servicios1.png" style="max-width: 100%;">
             </div>
             <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios2.png" style="max-width: 100%;">
             </div>
-            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios3.png" style="max-width: 100%;">
+            <div class="col-sm-3"><img src="c:/github/barberia/assets/img/servicios3.png" style="max-width: 100%;">
             </div>
+            <div class="col-sm-1"></div>
         </div>
         <div class="row">
-            <div class="col-sm-6"><img src="c:/github/barberia/assets/img/servicios4.png" style="max-width: 100%;">
+            <div class="col-sm-1"></div>
+            <div class="col-sm-5"><img src="c:/github/barberia/assets/img/servicios4.png" style="max-width: 100%;">
             </div>
-            <div class="col-sm-6"><img src="c:/github/barberia/assets/img/servicios5.png" style="max-width: 100%;">
+            <div class="col-sm-5"><img src="c:/github/barberia/assets/img/servicios5.png" style="max-width: 100%;">
             </div>
+            <div class="col-sm-1"></div>
         </div>
     </div>
 
-    <div class="container-fluids text-center" style="border-color: black; border-radius: 50%; padding: 40px">
+    <div class="container-fluid text-center" style="border-color: black; border-radius: 50%; padding: 40px">
         <a name="ubicacion"></a><br><br><br>
         <div class="container-fluid psub">
             UBICACIÓN
@@ -149,21 +155,23 @@
             CONTACTO
         </div><br><br><br>
         <div class="row">
-            <div class="col sm-4">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-1">
                 <img src="c:/github/barberia/assets//img/whatsapp.png" class="social-logo">
             </div>
-            <div class="col sm-4">
+            <div class="col-sm-2">
                 <img src="c:/github/barberia/assets//img/instagram.png" class="social-logo">
             </div>
-            <div class="col sm-4">
+            <div class="col-sm-1">
                 <img src="c:/github/barberia/assets//img/facebook.png" class="social-logo">
             </div>
+            <div class="col-sm-4"></div>
         </div>
-    </div>
+    </div><br><br>
 
 </body>
 <div class="container-fluid titulo">
-    Bienvenido "Home"
+    Happy Soto Barber. Nos reservamos el derecho de admisión, visitanos!!!
 </div>
 
 </html>
