--- a/reserva.html
+++ b/reserva.html
@@ -14,11 +14,9 @@
     <div class="titulo">
         Vive la experiencia, Reserva tu hora
     </div>
-
     <div class="container-fluid">
         <div class="row">
             <div class=" col-lg-12 login text-center">
-
                 <div style="background-color: white; padding: 41px;border-radius:5%;">
                     <img src="c:/github/barberia/assets//img/logo-s.png" class="login-logo">
                     <p class="psub" style="padding: 20px; color: black;">SELECCIONA BARBERO</p><br>
@@ -43,6 +41,11 @@
                         <input type="date" id="fecha_atencion" name="fecha_atencion" required>
                     </div>
                     <div class="mb-3">
+                        <label for="servicio"> Seleccione Servicio :</label><br>
+                        <label><input type="checkbox" id="cbox1" value="first_checkbox" />&nbsp; Corte de Cabello&nbsp;&nbsp;</label>
+                        <label><input type="checkbox" id="cbox1" value="first_checkbox" />&nbsp; Perfilado de Barba&nbsp;&nbsp;</label>
+                        <label><input type="checkbox" id="cbox1" value="first_checkbox" />&nbsp; Afeitado al Ras&nbsp;&nbsp;</label>
+                        <label><input type="checkbox" id="cbox1" value="first_checkbox" />&nbsp; Tratamiento Facial&nbsp;&nbsp;</label><br><br>
                         <label for="hora_atencion"> Seleccione horario :</label>
                         <select id="hora_atencion" name="hora_atencion" required>
                             <option value="proyecto1">12:00</option>
@@ -55,6 +58,9 @@
                         </select><br><br>
                         <a class="btn btn-primary" href="./homepage.html" role="button">Volver a Home</a>
                         <a class="btn btn-primary" href="#" role="button" >Agendar</a><br>
+
+
+                        
                     </div>
                 </div>
             </div>
