arreglo columnas en tarjetas

--- a/homepage.html
+++ b/homepage.html
@@ -14,30 +14,31 @@
     <a name='home'></a>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#servicio">Servicios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#ubicacion">Ubicacion</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " href="#contacto">Contacto</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " href="login.html">Reserva</a>
-              </li>
-            </ul>
-          </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#servicio">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#ubicacion">Ubicacion</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="#contacto">Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="login.html">Reserva</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
     <div class="container-fluid login-logo" style="padding: 15px;">
         <img src="c:/github/barberia/assets/img/logo-s.png" />
     </div>
@@ -68,7 +69,6 @@
         <a name="servicio"></a>
         <p class="psub" style="padding: 100px;">NUESTROS SERVICIOS</p>
         <div class="row text-center">
-            <div class="col-sm-1"></div>
             <div class="col sm-2">
                 <div class="card" style="width: 18rem;">
                     <img src="c:/github/barberia/assets/img/cortecabello.png" class="card-img-top">
@@ -80,7 +80,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col sm-2">
+            <div class="col sm-3">
                 <div class="card" style="width: 18rem;">
                     <img src="c:/github/barberia/assets/img/perfilado.png" class="card-img-top">
                     <div class="card-body">
@@ -92,8 +92,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-1"></div>
-            <div class="col sm-2">
+            <div class="col sm-3">
                 <div class="card" style="width: 18rem;">
                     <img src="c:/github/barberia/assets/img/afeitado.png" class="card-img-top">
                     <div class="card-body">
@@ -104,7 +103,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col sm-2">
+            <div class="col sm-3">
                 <div class="card" style="width: 18rem;">
                     <img src="c:/github/barberia/assets/img/facial.png" class="card-img-top">
                     <div class="card-body">
