arreglos en todas las rutas

--- a/reserva.html
+++ b/reserva.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login-HS</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="c:/github/barberia/assets/css/estilo.css">
+    <link rel="stylesheet" href="./assets/css/estilo.css">
 </head>
 
 <body>
@@ -18,20 +18,20 @@
         <div class="row">
             <div class=" col-lg-12 login text-center">
                 <div style="background-color: white; padding: 41px;border-radius:5%;">
-                    <img src="c:/github/barberia/assets//img/logo-s.png" class="login-logo">
+                    <img src="./assets//img/logo-s.png" class="login-logo">
                     <p class="psub" style="padding: 20px; color: black;">SELECCIONA BARBERO</p><br>
                     <div class="container-fluid text-center">
                         <div class="row"><br><br>
                             <div class="col-sm-4">
-                                <img src="c:/github/barberia/assets/img/barbero3.png" style="max-width: 100%; padding: 10px;"><br>
+                                <img src="./assets/img/barbero3.png" style="max-width: 100%; padding: 10px;"><br>
                                 <button type="button" class="btn btn-lg btn-danger">Camila Oyarzo</button><br>
                             </div>
                             <div class="col-sm-4">
-                                <img src="c:/github/barberia/assets/img/barbero2.png" style="max-width: 100%; padding: 10px;">
+                                <img src="./assets/img/barbero2.png" style="max-width: 100%; padding: 10px;">
                                 <br><button type="button" class="btn btn-lg btn-danger">Matias Rivera</button><br>
                             </div>
                             <div class="col-sm-4">
-                                <img src="c:/github/barberia/assets/img/barbero1.png" style="max-width: 100%; padding: 10px;">
+                                <img src="./assets/img/barbero1.png" style="max-width: 100%; padding: 10px;">
                                 <br><button type="button" class="btn btn-lg btn-danger">Felipe Galaz</button><br>
                             </div>
                         </div>
