--- a/homepage.html
+++ b/homepage.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="c:/github/barberia/assets/css/estilo.css">
+    <link rel="stylesheet" href="./assets/css/estilo.css">
     <title>HomePage-HS</title>
     <a name='home'></a>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
@@ -40,18 +40,18 @@
         </div>
     </nav>
     <div class="container-fluid login-logo" style="padding: 15px;">
-        <img src="c:/github/barberia/assets/img/logo-s.png" />
+        <img src="./assets/img/logo-s.png" />
     </div>
     <div class="container-fluid text-center">
         <div class="row">
             <div class="col-sm-4">
-                <img src="c:/github/barberia/assets/img/barbe3.png" style="max-width: 100%;">
+                <img src="./assets/img/barbe3.png" style="max-width: 100%;">
             </div>
             <div class="col-sm-4">
-                <img src="c:/github/barberia/assets/img/barbe2.png" style="max-width: 100%;">
+                <img src="./assets/img/barbe2.png" style="max-width: 100%;">
             </div>
             <div class="col-sm-4">
-                <img src="c:/github/barberia/assets/img/barbe1.png" style="max-width: 100%;">
+                <img src="./assets/img/barbe1.png" style="max-width: 100%;">
             </div>
         </div>
     </div>
@@ -71,7 +71,7 @@
         <div class="row text-center">
             <div class="col sm-2">
                 <div class="card" style="width: 18rem;">
-                    <img src="c:/github/barberia/assets/img/cortecabello.png" class="card-img-top">
+                    <img src="./assets/img/cortecabello.png" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Corte de Cabello</h5>
                         <p class="card-text">Asesoría, corte, lavado y peinado de cabello, incluye aplicación de pomada
@@ -82,7 +82,7 @@
             </div>
             <div class="col sm-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="c:/github/barberia/assets/img/perfilado.png" class="card-img-top">
+                    <img src="./assets/img/perfilado.png" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Perfilado de Barba</h5>
                         <p class="card-text">Perfilado navaja, arreglo de barba, toallas calientes.Incluye aplicación de
@@ -94,7 +94,7 @@
             </div>
             <div class="col sm-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="c:/github/barberia/assets/img/afeitado.png" class="card-img-top">
+                    <img src="./assets/img/afeitado.png" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Afeitado al Ras</h5>
                         <p class="card-text">Toallas calientes, aplicación de crema/gel de afeitar, rasurado con navaja
@@ -105,7 +105,7 @@
             </div>
             <div class="col sm-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="c:/github/barberia/assets/img/facial.png" class="card-img-top">
+                    <img src="./assets/img/facial.png" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Tratamiento Facial</h5>
                         <p class="card-text">Limpieza, exfolación, toallas calientes, mascara de carbón, loción
@@ -120,19 +120,19 @@
     <div class="container-fluid text-center align-items-center">
         <div class="row">
             <div class="col-sm-1"></div>
-            <div class="col-sm-3"><img src="c:/github/barberia/assets/img/servicios1.png" style="max-width: 100%;">
+            <div class="col-sm-3"><img src="./assets/img/servicios1.png" style="max-width: 100%;">
             </div>
-            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios2.png" style="max-width: 100%;">
+            <div class="col-sm-4"><img src="./assets/img/servicios2.png" style="max-width: 100%;">
             </div>
-            <div class="col-sm-3"><img src="c:/github/barberia/assets/img/servicios3.png" style="max-width: 100%;">
+            <div class="col-sm-3"><img src="./assets/img/servicios3.png" style="max-width: 100%;">
             </div>
             <div class="col-sm-1"></div>
         </div>
         <div class="row">
             <div class="col-sm-1"></div>
-            <div class="col-sm-5"><img src="c:/github/barberia/assets/img/servicios4.png" style="max-width: 100%;">
+            <div class="col-sm-5"><img src="./assets/img/servicios4.png" style="max-width: 100%;">
             </div>
-            <div class="col-sm-5"><img src="c:/github/barberia/assets/img/servicios5.png" style="max-width: 100%;">
+            <div class="col-sm-5"><img src="./assets/img/servicios5.png" style="max-width: 100%;">
             </div>
             <div class="col-sm-1"></div>
         </div>
@@ -156,13 +156,13 @@
         <div class="row">
             <div class="col-sm-4"></div>
             <div class="col-sm-1">
-                <img src="c:/github/barberia/assets//img/whatsapp.png" class="social-logo">
+                <img src="./assets//img/whatsapp.png" class="social-logo">
             </div>
             <div class="col-sm-2">
-                <img src="c:/github/barberia/assets//img/instagram.png" class="social-logo">
+                <img src="./assets//img/instagram.png" class="social-logo">
             </div>
             <div class="col-sm-1">
-                <img src="c:/github/barberia/assets//img/facebook.png" class="social-logo">
+                <img src="./assets//img/facebook.png" class="social-logo">
             </div>
             <div class="col-sm-4"></div>
         </div>
