--- a/homepage.html
+++ b/homepage.html
@@ -35,6 +35,9 @@
                     <li class="nav-item">
                         <a class="nav-link " href="login.html">Reserva</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="cerrarsesion.html">Cerrar sesion</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -156,18 +159,17 @@
         <div class="row">
             <div class="col-sm-4"></div>
             <div class="col-sm-1">
-                <img src="./assets//img/whatsapp.png" class="social-logo">
+                <a href="https://web.whatsapp.com/"><img src="./assets//img/whatsapp.png" class="social-logo"></a>
             </div>
             <div class="col-sm-2">
-                <img src="./assets//img/instagram.png" class="social-logo">
+                <a href="https://www.instagram.com/"><img src="./assets//img/instagram.png" class="social-logo"></a>
             </div>
             <div class="col-sm-1">
-                <img src="./assets//img/facebook.png" class="social-logo">
+                <a href="https://web.facebook.com/"><img src="./assets//img/facebook.png" class="social-logo"></a>
             </div>
             <div class="col-sm-4"></div>
         </div>
     </div><br><br>
-
 </body>
 <div class="container-fluid titulo">
     Happy Soto Barber. Nos reservamos el derecho de admisión, visitanos!!!
