Arreglo en ruta boton login. mejoras en modificar

--- a/creausuario.html
+++ b/creausuario.html
@@ -36,7 +36,7 @@
                         <label for="formGroupExampleInput2" class="form-label">Repita Contraseña</label>
                         <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="">
                     </div>
-                    <a class="btn btn-primary" href="#" role="button">Iniciar</a>
+                    <a class="btn btn-primary" href="usuariocreado.html" role="button">Iniciar</a>
                 </div>
             </div>
             <div class="col-lg-8 img_lateral_crea"></div>
