--- a/modificar.html
+++ b/modificar.html
@@ -11,14 +11,14 @@
 
 <body>
     <div class="titulo">
-        Administracion HAPPY-SOTO
+        ADMINISTRACION
     </div>
     <div class="container-fluid">
         <div class="row">
             <div class=" col-lg-12 login text-center">
                 <div style="background-color: white; padding: 41px;border-radius:5%;">
                     <img src="./assets//img/logo-s.png" class="login-logo">
-                    <a class="btn btn-primary" href="./homepage.html" role="button">Agregar nuevo barbero</a>
+                    <a class="btn btn-primary" href="#" role="button">Agregar nuevo barbero</a>
                     <p class="psub" style="padding: 20px; color: black;">MODIFICA BARBERO</p><br>    
                     <div class="container-fluid text-center">
                         <div class="row"><br><br>
