--- a/creausuario.html
+++ b/creausuario.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,7 +7,6 @@
     <title>CreaUsuario-HS</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/estilo.css">
-
 </head>
 
 <body>
@@ -20,28 +19,37 @@
             <div class="mb-0 col-sm-8 col-lg-4 login">
                 <div class="text-center" style="background-color: white; padding: 40px;border-radius:5%;">
                     <img src="./assets//img/logo-s.png" class="login-logo">
-                    <div class="mb-1 align-items-center justify-content-center ">
-                        <label for="formGroupExampleInput" class="form-label text-center ">Nombre</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
-                    </div>
-                    <div class="mb-4">
-                        <label for="formGroupExampleInput2" class="form-label">Correo</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="">
-                    </div>
-                    <div class="mb-1">
-                        <label for="formGroupExampleInput2" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="">
-                    </div>
-                    <div class="mb-1">
-                        <label for="formGroupExampleInput2" class="form-label">Repita Contraseña</label>
-                        <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="">
-                    </div>
-                    <a class="btn btn-primary" href="usuariocreado.html" role="button">Crear</a>
+                    <form id="registerForm"> <!-- Agregamos el ID al formulario -->
+                        <div class="mb-1 align-items-center justify-content-center ">
+                            <label for="name" class="form-label text-center ">Nombre</label>
+                            <input type="text" class="form-control" id="name" name="name" placeholder="">
+                        </div>
+                        <div class="mb-4">
+                            <label for="email" class="form-label">Correo</label>
+                            <input type="email" class="form-control" id="email" name="email" placeholder="">
+                        </div>
+                        <div class="mb-1">
+                            <label for="password" class="form-label">Contraseña</label>
+                            <input type="password" class="form-control" id="password" name="password" placeholder="">
+                        </div>
+                        <div class="mb-1">
+                            <label for="confirmPassword" class="form-label">Repita Contraseña</label>
+                            <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Crear</button> <!-- Cambiamos el <a> por un <button> -->
+                    </form>
                 </div>
             </div>
             <div class="col-lg-8 img_lateral_crea"></div>
         </div>
     </div>
+
+    <!-- Agregamos jQuery y el plugin jQuery Validate al final del body -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+
+    <!-- Agregamos el script personalizado para el registro -->
+    <script src="./assets/js/register.js"></script>
 </body>
 
 </html>
