--- a/revisacorreo.html
+++ b/revisacorreo.html
@@ -15,10 +15,11 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class=" col-lg-4 login">
+            <div class=" col-lg-4 login text-center">
                 <div style="background-color: white; padding: 40px;border-radius:5%;">
                     <img src="./assets//img/logo-s.png" class="login-logo">
                     <p class="pcorreo">Correo de recuperacion enviado. Por favor revisa tu bandeja de entrada.</p>
+                    <a class="btn btn-primary" style="align-items: center;" href="login.html" role="button">volver a Login </a><br>
                 </div>
             </div>
             <div class="col-lg-8 img_restorepass"></div>
