--- a/creausuario.html
+++ b/creausuario.html
@@ -19,7 +19,7 @@
             <div class="mb-0 col-sm-8 col-lg-4 login">
                 <div class="text-center" style="background-color: white; padding: 40px;border-radius:5%;">
                     <img src="./assets//img/logo-s.png" class="login-logo">
-                    <form id="registerForm"> <!-- Agregamos el ID al formulario -->
+                    <form id="registerForm"> 
                         <div class="mb-1 align-items-center justify-content-center ">
                             <label for="name" class="form-label text-center ">Nombre</label>
                             <input type="text" class="form-control" id="name" name="name" placeholder="">
@@ -36,19 +36,16 @@
                             <label for="confirmPassword" class="form-label">Repita Contraseña</label>
                             <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="">
                         </div>
-                        <button type="submit" class="btn btn-primary">Crear</button> <!-- Cambiamos el <a> por un <button> -->
+                        <button type="submit" class="btn btn-primary">Crear</button> 
                     </form>
                 </div>
             </div>
             <div class="col-lg-8 img_lateral_crea"></div>
         </div>
     </div>
-
-    <!-- Agregamos jQuery y el plugin jQuery Validate al final del body -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
 
-    <!-- Agregamos el script personalizado para el registro -->
     <script src="./assets/js/register.js"></script>
 </body>
 
